fix: backwards compatibility issue with full width button on mobile in dh button group and action components

--- a/components/ButtonGroup/src/index.scss
+++ b/components/ButtonGroup/src/index.scss
@@ -6,6 +6,8 @@
   padding-block-end: var(--denhaag-button-group-padding, var(--denhaag-button-group-gap));
 
   @media (width <= 767px) {
+    --utrecht-button-max-inline-size: 100%;
+
     width: 100%;
   }
 
